log/build_2025-01-04_01-07-00/mypkg/stderr.log
  File "/home/tashu/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 26
    if __name__ == '__main__'
                            ^
SyntaxError: invalid syntax

